//-*-mode:protobuf; mode:font-lock;-*-

syntax = "proto3";

import "calin.proto";

package calin.ix.io;

message SQLTable
{
  string base_name      = 1 [(CFO).desc='Name of base table'];  
  string table_name     = 2 [(CFO).sql.is_key=true,
                             (CFO).desc='Full table name'];
  string sql_table_name = 3 [(CFO).desc='SQL table name'];
  string description    = 4 [(CFO).desc='Description of table'];  
}

message SQLTableField
{
  string base_name      = 1 [(CFO).desc='Name of base table'];  
  string table_name     = 2 [(CFO).sql.is_key=true,
                             (CFO).desc='Full table name'];
  string field_name     = 3 [(CFO).sql.is_key=true,
                             (CFO).desc='Full field name'];
  string sql_table_name = 4 [(CFO).desc='SQL table name'];
  string sql_field_name = 5 [(CFO).desc='SQL field name'];
  string description    = 6 [(CFO).desc='Description of table field'];
  string units          = 7 [(CFO).desc='Units for data in table field'];
  string proto_message  = 8 [(CFO).desc='Protobuf message type'];
  string proto_field    = 9 [(CFO).desc='Protobuf field name'];
  uint32 proto_number   = 10 [(CFO).desc='Protobuf field number'];
}
